// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PetSpeciesCatForm > renders Disabled 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-Select-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-Select-label"
        data-required="true"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
      >
        Breed
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-Select-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-Select-wrapper"
        data-disabled="true"
        data-pointer="true"
        data-variant="default"
        data-with-right-section="true"
        style="--input-right-section-pointer-events: none;"
      >
        <input
          aria-haspopup="listbox"
          aria-invalid="false"
          autocomplete="off"
          class="m_8fb7ebe7 mantine-Input-input mantine-Select-input"
          data-disabled="true"
          data-variant="default"
          disabled=""
          id="mantine-12voha2vo"
          readonly=""
          required=""
          value="Domestic Short Hair"
        />
        <div
          class="m_82577fc2 mantine-Input-section mantine-Select-section"
          data-position="right"
        >
          <svg
            class="m_2943220b mantine-ComboboxChevron-chevron"
            data-combobox-chevron="true"
            fill="none"
            viewBox="0 0 15 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.93179 5.43179C4.75605 5.60753 4.75605 5.89245 4.93179 6.06819C5.10753 6.24392 5.39245 6.24392 5.56819 6.06819L7.49999 4.13638L9.43179 6.06819C9.60753 6.24392 9.89245 6.24392 10.0682 6.06819C10.2439 5.89245 10.2439 5.60753 10.0682 5.43179L7.81819 3.18179C7.73379 3.0974 7.61933 3.04999 7.49999 3.04999C7.38064 3.04999 7.26618 3.0974 7.18179 3.18179L4.93179 5.43179ZM10.0682 9.56819C10.2439 9.39245 10.2439 9.10753 10.0682 8.93179C9.89245 8.75606 9.60753 8.75606 9.43179 8.93179L7.49999 10.8636L5.56819 8.93179C5.39245 8.75606 5.10753 8.75606 4.93179 8.93179C4.75605 9.10753 4.75605 9.39245 4.93179 9.56819L7.18179 11.8182C7.35753 11.9939 7.64245 11.9939 7.81819 11.8182L10.0682 9.56819Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <input
      disabled=""
      name="$.species.cat:breed"
      type="hidden"
      value="DSH"
    />
    <div
      class="m_dd36362e mantine-Slider-root"
      required=""
      style="--slider-radius: var(--mantine-radius-xl); --slider-thumb-size: calc(var(--slider-size) * 2);"
      tabindex="-1"
    >
      <div
        class="m_a8645c2 mantine-Slider-trackContainer"
        data-disabled="true"
      >
        <div
          class="m_c9ade57f mantine-Slider-track"
          data-disabled="true"
        >
          <div
            class="m_38aeed47 mantine-Slider-bar"
            data-disabled="true"
            style="--slider-bar-width: calc(40% + var(--slider-size)); --slider-bar-offset: calc(0% - var(--slider-size));"
          />
          <div
            aria-label=""
            aria-valuemax="10"
            aria-valuemin="0"
            aria-valuenow="4"
            class="mantine-focus-auto m_c9a9a60a mantine-Slider-thumb"
            data-disabled="true"
            role="slider"
            style="--slider-thumb-offset: 40%;"
            tabindex="0"
          />
          <div>
            <div
              class="m_b7b0423a mantine-Slider-markWrapper"
              style="--mark-offset: 0%;"
            >
              <div
                class="m_dd33bc19 mantine-Slider-mark"
                data-disabled="true"
                data-filled="true"
              />
              <div
                class="m_68c77a5b mantine-Slider-markLabel"
              >
                Quiet
              </div>
            </div>
            <div
              class="m_b7b0423a mantine-Slider-markWrapper"
              style="--mark-offset: 50%;"
            >
              <div
                class="m_dd33bc19 mantine-Slider-mark"
                data-disabled="true"
              />
              <div
                class="m_68c77a5b mantine-Slider-markLabel"
              >
                Normal
              </div>
            </div>
            <div
              class="m_b7b0423a mantine-Slider-markWrapper"
              style="--mark-offset: 100%;"
            >
              <div
                class="m_dd33bc19 mantine-Slider-mark"
                data-disabled="true"
              />
              <div
                class="m_68c77a5b mantine-Slider-markLabel"
              >
                Noisy
              </div>
            </div>
          </div>
        </div>
      </div>
      <input
        name="$.species.cat:meows"
        type="hidden"
        value="4"
      />
    </div>
  </div>
</div>
`;

exports[`PetSpeciesCatForm > renders Error 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-Select-root"
      data-error="true"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-Select-label"
        data-required="true"
        for="mantine-12voha2vo"
        id="mantine-12voha2vo-label"
      >
        Breed
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-Select-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-Select-wrapper"
        data-error="true"
        data-pointer="true"
        data-variant="default"
        data-with-right-section="true"
        style="--input-margin-bottom: calc(var(--mantine-spacing-xs) / 2); --input-right-section-pointer-events: none;"
      >
        <input
          aria-describedby="mantine-12voha2vo-error"
          aria-haspopup="listbox"
          aria-invalid="true"
          autocomplete="off"
          class="m_8fb7ebe7 mantine-Input-input mantine-Select-input"
          data-error="true"
          data-variant="default"
          id="mantine-12voha2vo"
          readonly=""
          required=""
          value=""
        />
        <div
          class="m_82577fc2 mantine-Input-section mantine-Select-section"
          data-position="right"
        >
          <svg
            class="m_2943220b mantine-ComboboxChevron-chevron"
            data-combobox-chevron="true"
            data-error="[object Object]"
            fill="none"
            viewBox="0 0 15 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.93179 5.43179C4.75605 5.60753 4.75605 5.89245 4.93179 6.06819C5.10753 6.24392 5.39245 6.24392 5.56819 6.06819L7.49999 4.13638L9.43179 6.06819C9.60753 6.24392 9.89245 6.24392 10.0682 6.06819C10.2439 5.89245 10.2439 5.60753 10.0682 5.43179L7.81819 3.18179C7.73379 3.0974 7.61933 3.04999 7.49999 3.04999C7.38064 3.04999 7.26618 3.0974 7.18179 3.18179L4.93179 5.43179ZM10.0682 9.56819C10.2439 9.39245 10.2439 9.10753 10.0682 8.93179C9.89245 8.75606 9.60753 8.75606 9.43179 8.93179L7.49999 10.8636L5.56819 8.93179C5.39245 8.75606 5.10753 8.75606 4.93179 8.93179C4.75605 9.10753 4.75605 9.39245 4.93179 9.56819L7.18179 11.8182C7.35753 11.9939 7.64245 11.9939 7.81819 11.8182L10.0682 9.56819Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <p
        class="m_8f816625 mantine-InputWrapper-error mantine-Select-error"
        id="mantine-12voha2vo-error"
      >
        Not a recognized cat breed
      </p>
    </div>
    <input
      name="$.species.cat:breed"
      type="hidden"
      value="Fish"
    />
    <div
      class="m_dd36362e mantine-Slider-root"
      required=""
      style="--slider-radius: var(--mantine-radius-xl); --slider-thumb-size: calc(var(--slider-size) * 2);"
      tabindex="-1"
    >
      <div
        class="m_a8645c2 mantine-Slider-trackContainer"
      >
        <div
          class="m_c9ade57f mantine-Slider-track"
        >
          <div
            class="m_38aeed47 mantine-Slider-bar"
            style="--slider-bar-width: calc(10% + var(--slider-size)); --slider-bar-offset: calc(0% - var(--slider-size));"
          />
          <div
            aria-label=""
            aria-valuemax="10"
            aria-valuemin="0"
            aria-valuenow="1"
            class="mantine-focus-auto m_c9a9a60a mantine-Slider-thumb"
            role="slider"
            style="--slider-thumb-offset: 10%;"
            tabindex="0"
          />
          <div>
            <div
              class="m_b7b0423a mantine-Slider-markWrapper"
              style="--mark-offset: 0%;"
            >
              <div
                class="m_dd33bc19 mantine-Slider-mark"
                data-filled="true"
              />
              <div
                class="m_68c77a5b mantine-Slider-markLabel"
              >
                Quiet
              </div>
            </div>
            <div
              class="m_b7b0423a mantine-Slider-markWrapper"
              style="--mark-offset: 50%;"
            >
              <div
                class="m_dd33bc19 mantine-Slider-mark"
              />
              <div
                class="m_68c77a5b mantine-Slider-markLabel"
              >
                Normal
              </div>
            </div>
            <div
              class="m_b7b0423a mantine-Slider-markWrapper"
              style="--mark-offset: 100%;"
            >
              <div
                class="m_dd33bc19 mantine-Slider-mark"
              />
              <div
                class="m_68c77a5b mantine-Slider-markLabel"
              >
                Noisy
              </div>
            </div>
          </div>
        </div>
      </div>
      <input
        name="$.species.cat:meows"
        type="hidden"
        value="1"
      />
    </div>
  </div>
</div>
`;

exports[`PetSpeciesCatForm > renders Valid 1`] = `
<div>
  <style
    data-mantine-styles="classes"
  >
    @media (max-width: 35.99375em) {.mantine-visible-from-xs {display: none !important;}}@media (min-width: 36em) {.mantine-hidden-from-xs {display: none !important;}}@media (max-width: 47.99375em) {.mantine-visible-from-sm {display: none !important;}}@media (min-width: 48em) {.mantine-hidden-from-sm {display: none !important;}}@media (max-width: 61.99375em) {.mantine-visible-from-md {display: none !important;}}@media (min-width: 62em) {.mantine-hidden-from-md {display: none !important;}}@media (max-width: 74.99375em) {.mantine-visible-from-lg {display: none !important;}}@media (min-width: 75em) {.mantine-hidden-from-lg {display: none !important;}}@media (max-width: 87.99375em) {.mantine-visible-from-xl {display: none !important;}}@media (min-width: 88em) {.mantine-hidden-from-xl {display: none !important;}}
  </style>
  <div
    class="m_6d731127 mantine-Stack-root"
    style="--stack-gap: var(--mantine-spacing-md); --stack-align: stretch; --stack-justify: flex-start;"
  >
    <div
      class="m_46b77525 mantine-InputWrapper-root mantine-Select-root"
    >
      <label
        class="m_8fdc1311 mantine-InputWrapper-label mantine-Select-label"
        data-required="true"
        for="mantine-1fu8n1fu8"
        id="mantine-1fu8n1fu8-label"
      >
        Breed
        <span
          aria-hidden="true"
          class="m_78a94662 mantine-InputWrapper-required mantine-Select-required"
        >
           *
        </span>
      </label>
      <div
        class="m_6c018570 mantine-Input-wrapper mantine-Select-wrapper"
        data-pointer="true"
        data-variant="default"
        data-with-right-section="true"
        style="--input-right-section-pointer-events: none;"
      >
        <input
          aria-haspopup="listbox"
          aria-invalid="false"
          autocomplete="off"
          class="m_8fb7ebe7 mantine-Input-input mantine-Select-input"
          data-variant="default"
          id="mantine-1fu8n1fu8"
          readonly=""
          required=""
          value="Burmese"
        />
        <div
          class="m_82577fc2 mantine-Input-section mantine-Select-section"
          data-position="right"
        >
          <svg
            class="m_2943220b mantine-ComboboxChevron-chevron"
            data-combobox-chevron="true"
            fill="none"
            viewBox="0 0 15 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.93179 5.43179C4.75605 5.60753 4.75605 5.89245 4.93179 6.06819C5.10753 6.24392 5.39245 6.24392 5.56819 6.06819L7.49999 4.13638L9.43179 6.06819C9.60753 6.24392 9.89245 6.24392 10.0682 6.06819C10.2439 5.89245 10.2439 5.60753 10.0682 5.43179L7.81819 3.18179C7.73379 3.0974 7.61933 3.04999 7.49999 3.04999C7.38064 3.04999 7.26618 3.0974 7.18179 3.18179L4.93179 5.43179ZM10.0682 9.56819C10.2439 9.39245 10.2439 9.10753 10.0682 8.93179C9.89245 8.75606 9.60753 8.75606 9.43179 8.93179L7.49999 10.8636L5.56819 8.93179C5.39245 8.75606 5.10753 8.75606 4.93179 8.93179C4.75605 9.10753 4.75605 9.39245 4.93179 9.56819L7.18179 11.8182C7.35753 11.9939 7.64245 11.9939 7.81819 11.8182L10.0682 9.56819Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <input
      name="$.species.cat:breed"
      type="hidden"
      value="Burmese"
    />
    <div
      class="m_dd36362e mantine-Slider-root"
      required=""
      style="--slider-radius: var(--mantine-radius-xl); --slider-thumb-size: calc(var(--slider-size) * 2);"
      tabindex="-1"
    >
      <div
        class="m_a8645c2 mantine-Slider-trackContainer"
      >
        <div
          class="m_c9ade57f mantine-Slider-track"
        >
          <div
            class="m_38aeed47 mantine-Slider-bar"
            style="--slider-bar-width: calc(10% + var(--slider-size)); --slider-bar-offset: calc(0% - var(--slider-size));"
          />
          <div
            aria-label=""
            aria-valuemax="10"
            aria-valuemin="0"
            aria-valuenow="1"
            class="mantine-focus-auto m_c9a9a60a mantine-Slider-thumb"
            role="slider"
            style="--slider-thumb-offset: 10%;"
            tabindex="0"
          />
          <div>
            <div
              class="m_b7b0423a mantine-Slider-markWrapper"
              style="--mark-offset: 0%;"
            >
              <div
                class="m_dd33bc19 mantine-Slider-mark"
                data-filled="true"
              />
              <div
                class="m_68c77a5b mantine-Slider-markLabel"
              >
                Quiet
              </div>
            </div>
            <div
              class="m_b7b0423a mantine-Slider-markWrapper"
              style="--mark-offset: 50%;"
            >
              <div
                class="m_dd33bc19 mantine-Slider-mark"
              />
              <div
                class="m_68c77a5b mantine-Slider-markLabel"
              >
                Normal
              </div>
            </div>
            <div
              class="m_b7b0423a mantine-Slider-markWrapper"
              style="--mark-offset: 100%;"
            >
              <div
                class="m_dd33bc19 mantine-Slider-mark"
              />
              <div
                class="m_68c77a5b mantine-Slider-markLabel"
              >
                Noisy
              </div>
            </div>
          </div>
        </div>
      </div>
      <input
        name="$.species.cat:meows"
        type="hidden"
        value="1"
      />
    </div>
  </div>
</div>
`;
